--- a/enterprice/search/templates/inventory_detail.html
+++ b/enterprice/search/templates/inventory_detail.html
@@ -28,6 +28,15 @@
                 <button class="find_button">отправить</button>
             </form>
         </div>
+
+{#        {% if sum_remains_now == 0  %}#}
+{#        <p>Остаток позиции на сегодня  {{ sum_remains_now }} </p>#}
+{#        <form action="" method="post">#}
+{#        {% csrf_token %}#}
+{#            <button type="submit" name="mark_selection" value="55">Отметить позицию как выполненную</button>#}
+{#        </form>#}
+{#        {% endif %}#}
+
     </header>
     <div class="table">
         <table class="table_inv">
@@ -36,7 +45,11 @@
                 <th>Наименование</th>
                 <th>Единица</th>
                 <th>Остаток по инвентаризации</th>
+                {% if remains_sum < 0 %}
+                    <td style="background-color: #e22b2b">Изилек!!!!</td>
+                {% else  %}
                 <th>Осталось посчитать</th>
+                {% endif %}
                 <th>Остаток на сегодня</th>
                 <th>Движение товара</th>
 
@@ -48,19 +61,22 @@
                 <td>{{ product.title }}</td>
                 <td>{{ product.base_unit }}</td>
                 <td>{{ unic_sum_posit }}</td>
-            <td>{{ remains_sum }}</td>
+                <td>{{ remains_sum }}</td>
                 <td>{{ sum_remains_now }} </td>
                 <td>{{ move_product }}</td>
 
                 <td>
-                    <div class="{% if remains_sum > 0 and unic_sum_posit > 0 %}blue
-                        {% elif remains_sum == 0 %}green
-                        {% else %}red
-                        {% endif %}">
-                        {% if remains_sum > 0 %} В работе
-                        {% elif remains_sum == 0 %} Позиция сошлась
-                        {% else %} Излишки
-                        {% endif %}
+                    <div class="{% if total_quantity_ord == 0 %} white
+                                {% elif remains_sum > 0 and unic_sum_posit > 0 %}blue
+                                {% elif remains_sum == 0 %}green
+                                {% else %}red
+                                {% endif %}">
+
+                                {% if total_quantity_ord == 0 %}
+                                {% elif remains_sum > 0 %} В работе
+                                {% elif remains_sum == 0 %} Позиция сошлась
+                                {% else %} Излишки
+                                {% endif %}
                     </div>
 
 
