--- a/enterprice/search/static/css/inventory_style.css
+++ b/enterprice/search/static/css/inventory_style.css
@@ -164,3 +164,13 @@ header {
 .yellow{
     background-color: rgba(255, 255, 0, 0.56);
 }
+
+.all_check_position form button{
+    height: 26px;
+    width: 220px;
+    border-radius: 5px;
+    border: 2px solid black;
+}
+.all_check_position form button:hover{
+    border: 1px solid #e22b2b;
+}
