--- a/enterprice/search/templates/inventory.html
+++ b/enterprice/search/templates/inventory.html
@@ -20,6 +20,12 @@
             <div class="errors">
                 <H3>{{ e_art_title }}</H3>
             </div>
+            <div class="all_check_position">
+                <form action="" method="POST">
+                    {% csrf_token %}
+                    <button type="submit" value="all_position">Все отмеченные позиции</button>
+                </form>
+            </div>
         </div>
 
         <div class="header_find_container">
