--- a/enterprice/search/templates/user_detail.html
+++ b/enterprice/search/templates/user_detail.html
@@ -13,8 +13,15 @@
         <div class="header_logo">
             <a href="{% url 'find' %}"><img src="{% static 'img/logo.jpg' %}" alt=""></a>
         </div>
-        <a href="{% url 'inventory' %}"><h2> Продолжить поиск ➡️</h2></a>
-        <p>Все позиции с которыми вы взаиможейсвовали</p>
+        <div class="hello_user">
+            <h2>Детализация подсчета позиций для {{ user.username }}</h2><br>
+            Количество посчитанных позиций в инвентаризации - {{ order_count }}
+
+        </div>
+        <div class="button_link_back">
+            <a class="button" href="{% url 'inventory' %}"> Продолжить поиск </a>
+        </div>
+
     </header>
     <div class="table">
         <table class="table_inv">
@@ -31,14 +38,15 @@
             {% for o in order %}
                 <tr>
                     <td>{{ user.username }}</td>
-                    <td>{{o.product.article  }}</td>
-                    <td>{{o.product.title  }}</td>
+                    <td class="article_table"><a
+                            href="{% url 'inventory_detail' o.product.article %}">{{ o.product.article }}</a></td>
+                    <td class="article_table"><a
+                            href="{% url 'inventory_detail' o.product.article %}">{{ o.product.title }}</a></td>
                     <td>{{ o.product.base_unit }}</td>
-                    <td>{{o.quantity_ord  }}</td>
+                    <td>{{ o.quantity_ord }}</td>
                     <td>{{ o.created_at }}</td>
                     <td>{{ o.address }}</td>
                     <td>{{ o.comment }}</td>
-
                 </tr>
             {% endfor %}
         </table>
