--- a/enterprice/search/templates/main.html
+++ b/enterprice/search/templates/main.html
@@ -14,8 +14,14 @@
     </div>
 </header>
 <div class="main_wrapper">
-    <h2>Описание</h2>
-    <p>Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: понимание сути ресурсосберегающих технологий в значительной степени обусловливает важность системы массового участия. И нет сомнений, что многие известные личности являются только методом политического участия и объективно рассмотрены соответствующими инстанциями. Лишь представители современных социальных резервов являются только методом политического участия и объявлены нарушающими общечеловеческие нормы этики и морали.</p>
+    <h2>Краткая инструкция</h2>
+    <div class="find_comment">
+        <p>Для поиска по комментарию используйте в начале символ - <br>
+            Доступен ввод не более 4 слов  или цифр которые могут встретится в  комментарии
+        </p>
+    <img src="{% static '/img/manual/find_comment.jpg' %}" alt="">
+    </div>
+
 </div>
 </body>
 </html>
