--- a/enterprice/search/static/css/inventory_style.css
+++ b/enterprice/search/static/css/inventory_style.css
@@ -2,7 +2,7 @@ header {
     background-image: url("../img/heder_back.jpg");
     background-size: cover;
     width: 100%;
-    height: 150px;
+    height: 170px;
     display: flex;
     align-items: center;
     padding-left: 5px;
@@ -11,11 +11,14 @@ header {
 
 }
 
-.errors h3{
+.errors h3 {
     color: #be4f4f;
 
 }
 
+.info_container{
+    margin-bottom: 25px;
+}
 
 .header_logo img {
     height: 140px;
@@ -41,27 +44,17 @@ header {
     border-bottom-left-radius: 10px;
     box-shadow: 10px 10px 10px 2px rgba(34, 60, 80, 0.2);
 
-
 }
 
-.find_button {
-    height: 44px;
-    border: 2px solid #0e0e0e;
-    /*border-radius: 10px;*/
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    text-align: center;
-    box-shadow: 10px 10px 10px 2px rgba(34, 60, 80, 0.2);
 
-
-}
 
 .find_button button {
-    height: 100%;
-    width: 100%;
-    border-radius: 5px;
-    object-fit: contain;
-    border: none;
+    height: 48px;
+    width: 70px;
+    border-left: None;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background: #c58787;
 }
 
 .find_button button:hover {
@@ -161,16 +154,17 @@ header {
     background-color: rgba(0, 128, 0, 0.57);
 }
 
-.yellow{
+.yellow {
     background-color: rgba(255, 255, 0, 0.56);
 }
 
-.all_check_position form button{
+.all_check_position form button {
     height: 26px;
     width: 220px;
     border-radius: 5px;
     border: 2px solid black;
 }
-.all_check_position form button:hover{
+
+.all_check_position form button:hover {
     border: 1px solid #e22b2b;
 }
