--- a/enterprice/search/static/css/details_style.css
+++ b/enterprice/search/static/css/details_style.css
@@ -1,38 +1,25 @@
-.header {
+.main_wrapper {
     background-image: url("../img/2.jpg");
-    width: 100%;
-    height: 150px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 100vh;
     display: flex;
-    align-items: center;
-    padding-left: 5px;
-    padding-top: 5px;
-    justify-content: space-between;
-}
-
-.header_logo img {
-    height: 140px;
-    width: 200px;
-    border-radius: 20px;
-}
-
-.details_cart {
-    height: 800px;
-    width: 400px;
-    display: block;
     justify-content: center;
-    margin: 0 auto;
-    background: lavenderblush;
-    text-align: center;
-    text-decoration: none;
+    align-items: center;
+}
+
+.description_container {
     border: 2px solid black;
-    list-style-type: none;
-    font: 18px Arial, Helvetica, sans-serif;
+    width: 500px;
+    min-height: 50vh;
+    text-align: center;
+    /*background: rgba(160, 190, 204, 0.49);*/
+    font-size: 20px;
+    box-shadow: 3px -4px 26px 13px rgba(34, 60, 80, 0.46) inset;
+    background-image: url("../img/55.png");
+    background-size: cover;
+
+
 }
 
-.details_cart ul {
-    list-style-type: none;
-}
-
-.main_wrapper{
-     background-image: url("../img/2.jpg");
-}
