--- a/enterprice/search/templates/inventory.html
+++ b/enterprice/search/templates/inventory.html
@@ -14,12 +14,8 @@
             <a href="{% url 'find' %}"><img src="{% static 'img/logo.jpg' %}" alt=""></a>
         </div>
         <div class="info_container">
-            <div>Инвентаризация. <br>
-                Остаток ТМЦ от 03.10.23
-            </div>
-            <div class="errors">
-                <H3>{{ e_art_title }}</H3>
-            </div>
+
+
             <div class="all_check_position">
                 <form action="" method="POST">
                     {% csrf_token %}
@@ -34,7 +30,11 @@
             </div>
         </div>
 
-        <div class="header_find_container">
+        <div class="header_find_error_container">
+             <div>Инвентаризация. <br>
+                Остаток ТМЦ от 03.10.23
+            </div>
+            <div class="header_find_container">
 
             <div class="form_input">
 
@@ -49,6 +49,13 @@
                 </button>
             </div>
         </div>
+            <div class="errors">
+                <H3>{{ e_art_title }}</H3>
+            </div>
+        </div>
+
+
+
         <div class="info">
             <ul>
                 <li>Выполнеено - {{ percentage }}</li>
